Art university translation

--- a/index.html
+++ b/index.html
@@ -597,14 +597,18 @@
                 <p class="detail_en" id="detail">I had workshops to introduce graphic designer students to the concepts of web programming.</p>
                 <p class="detail_fa fa" id="detail">برگزاری سه دوره ورکشاپ برنامه نویسی برای دانشجویان رشته گرافیک</p>
                 <div id="status_box">
-                    <a target="_blank" id="image_3" href="https://ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2015.webp"><img src="./img/ArtUniversityofIsfahan-2015-icon.webp" alt="Art University of Isfahan - 2015"/></a>
-                    <a target="_blank" id="image_3" href="https://ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2013.webp"><img src="./img/ArtUniversityofIsfahan-2013-icon.webp" alt="Art University of Isfahan - 2013"/></a>
-                    <a target="_blank" id="image_3" href="https://ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2012.webp"><img src="./img/ArtUniversityofIsfahan-2012-icon.webp" alt="Art University of Isfahan - 2012"/></a>
+                    <a class="detail_en" target="_blank" id="image_3" href="https://ebrahimsepehr.ir/img/art-translate.pdf"><img src="./img/ArtUniversityofIsfahan-2015-icon.webp" alt="Art University of Isfahan - 2015"/></a>
+                    
+                    <a class="detail_fa" target="_blank" id="image_3" href="https://ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2015.webp"><img src="./img/ArtUniversityofIsfahan-2015-icon.webp" alt="Art University of Isfahan - 2015"/></a>
+                    <a class="detail_fa" target="_blank" id="image_3" href="https://ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2013.webp"><img src="./img/ArtUniversityofIsfahan-2013-icon.webp" alt="Art University of Isfahan - 2013"/></a>
+                    <a class="detail_fa" target="_blank" id="image_3" href="https://ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2012.webp"><img src="./img/ArtUniversityofIsfahan-2012-icon.webp" alt="Art University of Isfahan - 2012"/></a>
                 </div>
                 <div class="detail_en" id="status_box">
-                    <a id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2015.webp">Art University of Isfahan - 2015</a>
-                    <a id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2013.webp">Art University of Isfahan - 2013</a>
-                    <a id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2012.webp">Art University of Isfahan - 2012</a>
+                    <a class="detail_en" id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/art-translate.pdf">Art University of Isfahan - 2015</a>
+
+                    <a class="detail_fa" id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2015.webp">Art University of Isfahan - 2015</a>
+                    <a class="detail_fa" id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2013.webp">Art University of Isfahan - 2013</a>
+                    <a class="detail_fa" id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2012.webp">Art University of Isfahan - 2012</a>
                 </div>
                 <div class="detail_fa" id="status_box">
                     <a class="fa" id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2015.webp">دانشگاه هنر اصفهان - ۱۳۹۴</a>
