--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mohammad E. Sepehr (محمد ابراهیم سپهر), Principal Software Solution Architect</title>
+    <title>Mohammad E. Sepehr (محمد ابراهیم سپهر), Principal Solution Architect | Technical Lead | Development Team Lead | Problem Solver and Decision Maker</title>
     <meta name="description" content="Mohammad Ebrahim Sepehr (محمد ابراهیم سپهر)'s CV page. Expert in enterprise software solutions. Here is a list of professions, awards and certificates." />
     <meta property="og:description" content="Mohammad Ebrahim Sepehr (محمد ابراهیم سپهر)'s CV page. Expert in enterprise software solutions. Here is a list of professions, awards and certificates." />
     <meta property="og:image" content="https://ebrahimsepehr.ir/img/mesepehr.webp" />
@@ -53,7 +53,7 @@
 
 </head>
 <body>
-    <h1 class="detail_en">MOHAMMAD E. SEPEHR, Lead Technical Consultant</h1>
+    <h1 class="detail_en">MOHAMMAD E. SEPEHR, Principal Solution Architect | Technical Lead</h1>
     <h1 class="detail_fa fa">محمد ابراهیم سپهر - راهبر و مشاور ارشد نرم افزار</h1>
     <header>
         <div id="image">
@@ -555,7 +555,7 @@
                 <div class="detail_en" id="title">Awards and Certificates</div>
                 <div class="detail_fa fa" id="title">جوایز و گواهی نامه ها</div>
                 
-                <div class="detail_en" id="title2">ًRecommendations</div>
+                <div class="detail_en" id="title2">Recommendations</div>
                 <div class="detail_fa fa" id="title2">حسن انجام کار - توصیه نامه ها</div>
                 <div id="status_box">
                     <a class="detail_fa" target="_blank" id="image_3" href="https://ebrahimsepehr.ir/img/recommendations/paliz.pdf"><img src="./img/recommendations/paliz.webp" alt="Paliz ًRecommendation"/></a>
