Text problem solved

--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                         <div><div class="p75"></div></div>
                     </div>
                 </div>
-                <div class="detail_en" id="detail">As a Co-Founder and CTO, I'm on gathering technical solutions and best architect to run this project perfectly.
+                <div class="detail_en" id="detail">As a Co-Founder and CTO, I'm gathering technical solutions and the best architect to run this project perfectly.
                 Holder win is a market-making platform & IPG for digital assets.
     founded in 2022</div>
                 <div class="detail_fa fa" id="detail">به عنوان یکی از بنیان گذاران و مدیران فنی، در حال جمع‌آوری راه‌حل‌های فنی و بهترین ساختار برای اجرای کامل این پروژه هستم. Holder Win یک پلتفرم سازنده بازار و IPG برای دارایی‌های دیجیتال است که در سال ۲۰۲۲ تأسیس شده است.</div>
