--- a/index.html
+++ b/index.html
@@ -274,6 +274,8 @@
                 <p class="detail_en" id="detail">The Bina Institute, in order to enable the development of the necessary software infrastructure for its projects, initiated collaboration with me to establish an in-house programming team. My role was to set up web-based infrastructures such as survey forms, reporting panels, geospatial panels, and SSO systems.
                 <br/>
                 For this organization, I recruited two ReactJS developers and one Golang developer and one QC specialist. After receiving the necessary training, they were handed over to the product owner of the institute. All codes and servers were connected to CI/CD services, and the version release and backup processes were automated.</p>
+                <p class="detail_fa fa" class="fa" id="detail"><a target="_blank" class="fa link" href="https://ebrahimsepehr.ir/img/recommendations/bina.pdf">- توصیه نامه </a></p>
+                <p class="detail_en" id="detail"><a target="_blank" class="link" href="https://ebrahimsepehr.ir/img/recommendations/bina-translate.pdf">- Recommendation letter</a></p>
             </div>
             <div class="cv_part">
                 <div class="detail_en" id="title2">Technical Manager - Dayan Startup Studio (2023)</div>
@@ -593,6 +595,7 @@
                     <a class="detail_fa" target="_blank" id="image_3" href="https://ebrahimsepehr.ir/img/recommendations/paliz.pdf"><img src="./img/recommendations/paliz.webp" alt="Paliz ًRecommendation"/></a>
                     <a class="detail_en" target="_blank" id="image_3" href="https://ebrahimsepehr.ir/img/recommendations/paliz-translate.pdf"><img src="./img/recommendations/paliz.webp" alt="Paliz ًRecommendation"/></a>
                     <a class="detail_fa" target="_blank" id="image_3" href="https://ebrahimsepehr.ir/img/recommendations/bina.pdf"><img src="./img/recommendations/bina.webp" alt="Bina Institute Recommendation"/></a>
+                    <a class="detail_en" target="_blank" id="image_3" href="https://ebrahimsepehr.ir/img/recommendations/bina-translate.pdf"><img src="./img/recommendations/bina.webp" alt="Bina Institute Recommendation"/></a>
                     <a class="detail_en" target="_blank" id="image_3" href="https://ebrahimsepehr.ir/img/recommendations/Mohammad E. Sepehr - recommendation.pdf"><img src="./img/recommendations/Mohammad E. Sepehr - recommendation.webp" alt="Distriqt Pty Ltd Recommendation"/></a>
                     <a class="detail_fa" target="_blank" id="image_3" href="https://ebrahimsepehr.ir/img/recommendations/mhelli.pdf"><img src="./img/recommendations/mhelli.webp" alt="MHelli Recommendation"/></a>
                     <a class="detail_en" target="_blank" id="image_3" href="https://ebrahimsepehr.ir/img/recommendations/mhelli-translate.pdf"><img src="./img/recommendations/mhelli.webp" alt="MHelli Recommendation"/></a>
@@ -600,6 +603,7 @@
                 <div class="detail_en not_on_print" id="status_box">
                     <a id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/recommendations/paliz-translate.pdf">Paliz Co. Recommendation</a>
                     <a id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/recommendations/Mohammad E. Sepehr - recommendation.pdf">Distriqt Pty Ltd Recommendation</a>
+                    <a id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/recommendations/bina-translate.pdf">Bina Institute</a>
                     <a id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/recommendations/mhelli-translate.pdf">MHelli Co. Recommendation</a>
                 </div>
                 <div class="detail_fa" id="status_box">
