--- a/index.html
+++ b/index.html
@@ -63,12 +63,13 @@
             <div id="extra_space"></div>
             <!-- <div id="title">&lt;/</div> -->
             <p class="detail_fa" id="detail_fa">
-                با <span class="experience_text_light fa">.۰</span><span class="experience_text fa">۱۳</span> سال سابقه کار حرفه‌ای در حوزه نرم افزار ها، یک کارشناس قابل اعتماد و با تجربه در زمینه توسعه و مدیریت پروژه‌های برنامه‌نویسی با سال ها تجربه کد نویسی تحت اندروید، iOS، وب و دسکتاپ. <br/><br/>
-                متخصص در تیم‌سازی، برنامه‌نویسی های ویژه، طراحی سیستم نرم افزاری مناسب کسب و کار و راه‌اندازی فرایندهای CI/CD و راهبری تیم‌های برنامه‌نویسی برای دستیابی به اهداف سازمان. در طول سال‌ها، به عنوان مدیر فنی، مالک محصول، رهبر تیم و مهندس نرم افزار، در شرکت های بزرگ و کوچک و سازمان ها، نرم‌افزارهای پیچیده و محصولات IT با کیفیت بالا را متناسب با شرایط و نیازمندی ها توسعه دهم و به طور موثری در فرآیند توسعه و بهبود کیفیت نرم‌افزارها واقع شوم. از طریق طراحی و پیاده‌سازی فرایندهای CI/CD، توانسته‌ام عملکرد تیم‌ها را بهبود و توسعه نرم‌افزارها را تسهیل و سرعت بخشم.<br/><br/>
+                با بیش از <span class="experience_text_light fa">.۰</span><span class="experience_text fa">۱۳</span> سال تجربه در صنعت نرم‌افزار، تخصص من در توسعه نرم‌افزار و مدیریت پروژه است. در تیم‌سازی، برنامه‌نویسی، طراحی و ایجاد فرآیندهایی که توسعه نرم‌افزار را روان‌تر و کارآمدتر می‌کنند، مهارت بالایی دارم. هدایت تیم‌ها برای تولید محصولات نرم‌افزاری با کیفیت و بهبود عملکرد آن‌ها از طریق خودکارسازی فرآیندها و استفاده از ابزارهای مدیریت پروژه، کلید موفقیت من بوده است.
+                <br/><br/>همواره به دنبال پیاده‌سازی راه‌حل‌های خلاقانه و کاملاً سازگار با نیازهای مشتریان سازمانی هستم و رعایت استانداردهای آن‌ها برای من اولویت اول است.
             </p>
             <p class="detail_en" id="detail">
-                With <span class="experience_text">13</span><span class="experience_text_light">.0</span> years of professional experience in the software industry, I am a dependable and experienced specialist in software development and project management. My expertise lies in team building, skilled programming, designing and implementing CI/CD processes, and guiding software development teams towards project objectives. Throughout the years, as a team leader and software engineer, I have successfully developed complex software and delivered high-quality products within many companies. By designing and implementing CI/CD processes, I have been able to enhance team performance and facilitate software development effectively.<br/><br/>
-            </p>
+                With over <span class="experience_text">13</span><span class="experience_text_light">.0</span> years of experience in the software industry, I specialize in software development and project management. I professional at team building, programming, design, and implementing processes that make software development more efficient and seamless. Leading teams to create high-quality software products and improving their performance through automation and project management tools has been a key to my success.
+                <br/><br/>I am always focused on delivering creative solutions that are fully tailored to the needs of enterprise clients, with customer standards being my top priority.
+            </p> 
             <div class="detail_en not_on_print">
                 <div id="title">More Information</div>
                 <!-- <div id="title2">2009 - 2023</div> -->
