And this is my LOGO

--- a/index.html
+++ b/index.html
@@ -746,6 +746,7 @@
                         <br/><br/>
                         Throughout my journey, my main focus has been on programming and solving complex algorithmic problems to advance the best software solutions for my clients. My goal is to ensure that no project or programmer faces setbacks or disappointments during any stage of project execution. Consequently, I continue to pursue my professional work in programming and problem-solving. I possess extensive experience in team collaboration with developers, designers, and project managers, and I am capable of creating a positive and cohesive work environment. By emphasizing quality and precision in every aspect of a project, I strive to deliver the best results to my clients.</p>
                 </div>
+                <img id="logo" src="img/logo.png" alt="ebrahimsepehr logo">
                 <div class="detail_en" id="title2">Personal Characteristics</div>
                 <div class="detail_fa fa" id="title2">ویژگی های شخصیتی</div>
                 <p class="en-fa" id="detail">MBTI: ISTJ</p>
