Hamup resume added

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="detail_en not_on_print">
                 <div id="title">More Information</div>
                 <!-- <div id="title2">2009 - 2023</div> -->
-                    <div id="detail"><a class="link" href="#part1">- Coder, Principal Solution Architect</a></div>
+                    <div id="detail"><a class="link" href="#part1">- Principal Solution Architect</a></div>
                     <div id="detail"><a class="link" href="#part2">- CEO CTO</a></div>
                     <div id="detail"><a class="link" href="#part3">- Advisor</a></div>
                     <div id="detail"><a class="link" href="#part4">- Awards and Certificates</a></div>
@@ -176,6 +176,37 @@
             <div class="detail_en" id="title">Experiences</div>
             <div class="detail_fa fa" id="title">تجربه ها</div>
             <!-- <div id="title2">Major Customers</div> -->
+            <div class="cv_part">
+                <div class="detail_en" id="title2">Techlead - Hamup Co. (2024/now)</div>
+                <div class="detail_fa fa" id="title2">راهبر فنی - هم آپ - ۱۴۰۲/تاکنون    <a class="fa" target="_blank" id="web_page" href="https://hamup.ir/">(آقای نظری زاده)</a></div>
+                <div id="status_box">
+                    <a target="_blank" id="web_page" href="https://hamup.ir/">Hamup.ir</a>
+                </div>
+                <div id="status_box">
+                    <div id="status_bar">
+                        <h4>Team Building</h4>
+                        <div><div class="p100"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>Laravel</h4>
+                        <div><div class="70"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>NodeJS</h4>
+                        <div><div class="p30"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>NextJS</h4>
+                        <div><div class="p20"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>Flutter/web-app</h4>
+                        <div><div class="p90"></div></div>
+                    </div>
+                </div>
+                <p class="detail_fa fa" id="detail">من برای همکاری با استارت‌آپ "هم آپ" به‌منظور تحویل پروژه‌ای که قبلاً تولید شده بود، دعوت شدم. وظایف من شامل انتقال پروژه از تیم قبلی، توسعه ادامه پروژه، تجهیز شرکت به تیم داخلی و ایجاد زیرساخت‌های نرم‌افزاری و سخت‌افزاری بود. در ابتدای کار، بخش‌هایی از کدنویسی و تحلیل پروژه را بر عهده گرفتم و پایپلاین‌هایی را در گیت‌هاب برای خودکارسازی بیلدهای APK و مدیریت سرورها پیاده‌سازی کردم. این اقدامات برای اطمینان از پایداری پروژه و جلوگیری از مشکلات ناشی از خطای نیروی انسانی جدید انجام شد. همچنین با توجه به شرایط شرکت، نفراتی را انتخاب کردم که بیشترین هماهنگی و پتانسیل را برای انجام وظایف شرکت با کمترین هزینه داشته باشند. در حال حاضر، ۲ نفر برنامه‌نویس فول‌تایم پروژه را در استک‌های React، Laravel، Node.js و Flutter برای توسعه موبایل و وب پیش می‌برند. این تیم، که در حالت عادی به ۴ نفر نیاز داشت، با همین تعداد به‌طور کارآمد فعالیت می‌کند. نقش من شامل راهبری فنی و ارائه راه‌حل‌های نرم‌افزاری برای پیشبرد اهداف شرکت است.</p>
+                <p class="detail_en" id="detail">I was invited to collaborate with the startup "Ham App" to deliver a project that had already been developed. My responsibilities included taking over the project from the previous team, continuing its development, and equipping the company with an in-house team along with software and hardware infrastructure. Initially, I handled parts of the coding and project analysis, and implemented pipelines on GitHub for automating APK builds and server management. These measures ensured project stability and minimized issues caused by new team members joining the project. Additionally, I carefully selected team members who aligned best with the company’s requirements while maintaining cost efficiency. Currently, 2 full-time developers manage the project across React, Laravel, Node.js, and Flutter stacks for mobile and web development. This team, which would typically require 4 members, operates effectively with the streamlined setup. My role involves technical leadership and providing software solutions to drive the company's objectives forward.</p>
+            </div>
             <div class="cv_part">
                 <div class="detail_en" id="title2">CTO - Sepehrino Co. (2024/now)</div>
                 <div class="detail_fa fa" id="title2">مدیر فنی - سپهرینو - ۱۴۰۳/تاکنون    <a class="fa" target="_blank" id="web_page" href="https://sepehrino.com/about-us">(آقای سید عطا نیرهدی)</a></div>
