Images added to some projects

--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
             <div class="cv_part">
                 <div class="detail_en" id="title2">Techlead - Hamup Co. (2024/now)</div>
                 <div class="detail_fa fa" id="title2">راهبر فنی - هم آپ - ۱۴۰۲/تاکنون    <a class="fa" target="_blank" id="web_page" href="https://hamup.ir/">(آقای نظری زاده)</a></div>
+                <a class="not_on_print" target="_blank" id="web_page" href="https://hamup.ir/"><img src="img/projects/hamup.webp" alt="Hamup.ir"/></a>
                 <div id="status_box">
                     <a target="_blank" id="web_page" href="https://hamup.ir/">Hamup.ir</a>
                 </div>
@@ -210,6 +211,7 @@
             <div class="cv_part">
                 <div class="detail_en" id="title2">CTO - Sepehrino Co. (2024/now)</div>
                 <div class="detail_fa fa" id="title2">مدیر فنی - سپهرینو - ۱۴۰۳/تاکنون    <a class="fa" target="_blank" id="web_page" href="https://sepehrino.com/about-us">(آقای سید عطا نیرهدی)</a></div>
+                <a class="not_on_print" target="_blank" id="web_page" href="https://sepehrino.com/"><img src="img/projects/sepehrino.webp" alt="Sepehrino.com"/></a>
                 <div id="status_box">
                     <a target="_blank" id="web_page" href="https://sepehrino.com/">Sepehrino.com</a>
                 </div>
@@ -237,6 +239,7 @@
             <div class="cv_part">
                 <div class="detail_en" id="title2">CTO - Setareh Honar Institute. (2023/2024)</div>
                 <div class="detail_fa fa" id="title2">مدیر فنی - موسسه تصویری ستاره هنر - ۱۴۰۱/۱۴۰۲    <span class="fa" id="web_page">(آقای شهبازی)</a></div>
+                <a class="not_on_print" target="_blank" id="web_page" href="https://filmnab.com/"><img src="img/projects/filmnab.webp" alt="Filmnab.com"/></a>
                 <div id="status_box">
                     <a target="_blank" id="web_page" href="https://filmnab.com/">FilmNab Web</a>
                     <a target="_blank" id="web_page" href="https://tv.filmnab.com/">FilmNab TV</a>
@@ -371,6 +374,8 @@
             <div class="cv_part">
                 <div class="detail_en" id="title2">CTO - Helli Institute (2021/now)</div>
                 <div class="detail_fa fa" id="title2">مدیر فنی - موسسه آموزشی علامه حلی - ۱۳۹۸/تاکنون    <span class="fa" id="web_page" >(آقای انصاری)</span></div>
+                <a class="not_on_print" target="_blank" id="web_page" href="https://mhelli.com/"><img src="img/projects/mhelli.webp" alt="Mhelli.com"/></a>
+                
                 <div id="status_box">
                     <a target="_blank" id="web_page" href="https://mhelli.com">mhelli.com</a>
                 </div>
