--- a/index.html
+++ b/index.html
@@ -838,7 +838,7 @@
                     <a class="detail_en" target="_blank" id="image_3" href="https://www.ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2012.webp">
                         <img loading="lazy" src="./img/ArtUniversityofIsfahan-2012-icon.webp" alt="Art University of Isfahan - 2012"/>
                         Art University of Isfahan - 2012</a>
-                    <a class="detail_en" target="_blank" id="image_3" href="https://www.ebrahimsepehr.ir/img/Moud2024.pdf">
+                    <a class="detail_en" target="_blank" id="image_3" href="https://www.ebrahimsepehr.ir/img/Moud_translated_image_en.png">
                         <img loading="lazy" src="./img/Moud2024-icon.webp" alt="Art University of Isfahan - 2012"/>
                         Moud Highschool - 2024</a>
                     
