--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                 <div class="en-fa" id="detail"><a target="_blank" href="mailto:ebrahimsepehr@gmail.com">ebrahimsepehr@gmail.com</a></div>
                 <div class="detail_en" id="detail"><a target="_blank" href="tel:+989127785180">+98 912 778 51 80</a></div>
                 <div class="detail_fa fa" id="detail"><a class="fa" target="_blank" href="tel:+989127785180">۰۹۱۲۷۷۸۵۱۸۰</a></div>
+                <div class="en-fa" id="detail"><a target="_blank" href="https://docs.google.com/document/d/19Ertph7QkZYRoMu5S1EoCJDmCIkQ-4VgIDSGmX0sx5Q/edit?usp=drivesdk">CV</a></div>
                 <div class="en-fa" id="detail"><a target="_blank" href="https://www.ebrahimsepehr.ir">ebrahimsepehr.ir</a></div>
                 
 
