Left side menu updated

--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
                 <div class="detail_fa fa" id="title">اطلاعات تماس</div>
                 <div class="detail_en" id="detail">Mohammad Ebrahim Sepehr</div>
                 <div class="detail_fa fa" id="detail">محمد ابراهیم سپهر</div>
-                <div class="en-fa" id="detail"><a target="_blank" href="mailto:ebrahimsepehr@gmail.com">ebrahimsepehr@gmail.com</a></div>
-                <div class="detail_en" id="detail"><a target="_blank" href="tel:+989127785180">+98 912 778 51 80</a></div>
-                <div class="detail_fa fa" id="detail"><a class="fa" target="_blank" href="tel:+989127785180">۰۹۱۲۷۷۸۵۱۸۰</a></div>
-                <div class="en-fa" id="detail"><a target="_blank" href="https://docs.google.com/document/d/19Ertph7QkZYRoMu5S1EoCJDmCIkQ-4VgIDSGmX0sx5Q/edit?usp=drivesdk">CV</a></div>
-                <div class="en-fa" id="detail"><a target="_blank" href="https://www.ebrahimsepehr.ir">ebrahimsepehr.ir</a></div>
+                <a target="_blank" href="mailto:ebrahimsepehr@gmail.com"></a><div class="en-fa" id="detail">ebrahimsepehr@gmail.com</div></a>
+                <a target="_blank" href="tel:+989127785180"><div class="detail_en" id="detail">+98 912 778 51 80</div></a>
+                <a class="fa" target="_blank" href="tel:+989127785180"><div class="detail_fa fa" id="detail">۰۹۱۲۷۷۸۵۱۸۰</div></a>
+                <a target="_blank" href="https://docs.google.com/document/d/19Ertph7QkZYRoMu5S1EoCJDmCIkQ-4VgIDSGmX0sx5Q/edit?usp=drivesdk"><div class="en-fa" id="detail">CV</div></a>
+                <a target="_blank" href="https://www.ebrahimsepehr.ir"><div class="en-fa" id="detail">ebrahimsepehr.ir</div></a>
                 
 
 
