I don't want filmnab on my CV anymore

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 <p class="detail_fa fa" id="detail">من مسئول ارائه پروژه های نرم افزاری و راه اندازی یک تیم توسعه در محل دفتر شرکت و متخصص در موقعیت های Laravel و Next.js و آموزش و آنبرد کردن تیم بودم. نقش من شامل تجزیه و تحلیل وظایف، زمان‌بندی، و نظارت بر فعالیت‌های DevOps و اقدامات امنیتی در سرورهای شرکت بوده است. من برای اطمینان از اجرای کارآمد پروژه و حفظ استانداردهای بالای امنیت و عملکرد کار می کنم.</p>
                 <p class="detail_en" id="detail">I am responsible for delivering software projects and setting up a local development team specializing in Laravel and Next.js positions. My role includes analyzing tasks, scheduling, and overseeing DevOps activities such as pipeline processes and security measures on our company servers. I work to ensure efficient project execution and maintain high standards of security and performance.</p>
             </div>
-            <div class="cv_part">
+            <div class="cv_part detail_fa">
                 <div class="detail_en" id="title2">CTO - Setareh Honar Institute. (2023/2024)</div>
                 <div class="detail_fa fa" id="title2">مدیر فنی - موسسه تصویری ستاره هنر - ۱۴۰۱/۱۴۰۲    <span class="fa" id="web_page">(آقای شهبازی)</a></div>
                 <a class="not_on_print" target="_blank" id="web_page" href="https://filmnab.com/"><img loading="lazy" src="img/projects/filmnab.webp" alt="Filmnab.com"/></a>
@@ -773,7 +773,7 @@
                         فناوران ارتباطات پالیز</a>
                     <a class="detail_en en" target="_blank" id="image_3" href="https://www.ebrahimsepehr.ir/img/recommendations/paliz-translate.pdf">
                         <img loading="lazy" src="./img/recommendations/paliz.webp" alt="Paliz ًRecommendation"/>
-                        Paliz ًRecommendatio</a>
+                        Paliz Recommendatio</a>
                     <a class="detail_fa fa" target="_blank" id="image_3" href="https://www.ebrahimsepehr.ir/img/recommendations/bina.pdf">
                         <img loading="lazy" src="./img/recommendations/bina.webp" alt="Bina Institute Recommendation"/>
                         موسسه دیده گستر بینا</a>
