--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
             <div class="detail_en not_on_print">
                 <div id="title">Professional Profile</div>
                 <!-- <div id="title2">2009 - 2023</div> -->
-                    <div id="detail"><a class="link" href="#part1">- Principal Solution Architect</a></div>
-                    <div id="detail"><a class="link" href="#part2">- CEO/CTO</a></div>
+                    <div id="detail"><a class="link" href="#part1">- Technical Leadership/CTO</a></div>
+                    <div id="detail"><a class="link" href="#part2">- CEO/Cofounder</a></div>
                     <div id="detail"><a class="link" href="#part3">- Advisor</a></div>
                     <div id="detail"><a class="link" href="#part3.5">- Programming</a></div>
                     <div id="detail"><a class="link" href="#part4">- Awards and Certificates</a></div>
@@ -85,7 +85,7 @@
                 <div class="fa" id="title">سوابق حرفه ای</div>
                 <!-- <div class="fa" id="title2">۱۳۸۷ - ۱۴۰۲</div> -->
                     <div id="detail_fa"><a class="fa link" href="#part1">- مدیر فنی، کد نویس، معمار و راهبر نرم افزار</a></div>
-                    <div id="detail_fa"><a class="fa link" href="#part2">- مدیر فنی و مدیرعاملی</a></div>
+                    <div id="detail_fa"><a class="fa link" href="#part2">- بنیان گذار و مدیرعاملی</a></div>
                     <div id="detail_fa"><a class="fa link" href="#part3">- ارائه مشاوره</a></div>
                     <div id="detail_fa"><a class="fa link" href="#part3.5">- برنامه نویسی</a></div>
                     <div id="detail_fa"><a class="fa link" href="#part4">- افتخارات و گواهی نامه ها</a></div>
@@ -180,20 +180,72 @@
         </div>
         <div id="right_side">
             
-            <span class="parts" id="part1">
+        <span class="parts" id="part1">
             <div class="detail_en" id="title">Technical Leadership</div>
             <div class="detail_fa fa" id="title">مدیریت فنی</div>
             <!-- <div id="title2">Major Customers</div> -->
+
             <div class="cv_part">
-                <div class="detail_en" id="title2">Techlead - Hamup Co. (2024/now)</div>
-                <div class="detail_fa fa" id="title2">راهبر فنی - هم آپ - ۱۴۰۲/تاکنون    <a class="fa" target="_blank" id="web_page" href="https://hamup.ir/">(آقای نظری زاده)</a></div>
+                <div class="detail_en" id="title2">CTO - FN Logistic & Dienstleistung GmbH (2025/now)</div>
+                <div class="detail_fa fa" id="title2">مدیر فنی - FN Logistic & Dienstleistung GmbH - ۱۴۰۳/تاکنون    <a class="fa" target="_blank" id="web_page" href="https://www.linkedin.com/in/mohammadfoad-nadaf-70a492274/">(آقای نداف)</a></div>
+                <a class="not_on_print" target="_blank" id="web_page" href="https://snap-food.at/"><img loading="lazy" src="img/projects/snapfood.webp" alt="snap-food.at"/></a>
+                <div id="status_box">
+                    <a target="_blank" id="web_page" href="https://snap-food.at/">Snap-food.at</a>
+                </div>
+                <div id="status_box">
+                    <div id="status_bar">
+                        <h4>Tech Team Building</h4>
+                        <div><div class="p100"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>NextJS</h4>
+                        <div><div class="p70"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>.net Core</h4>
+                        <div><div class="p70"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>Socket.io</h4>
+                        <div><div class="p20"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>Flutter</h4>
+                        <div><div class="p70"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>Android</h4>
+                        <div><div class="p50"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>iOS</h4>
+                        <div><div class="p50"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>Devops</h4>
+                        <div><div class="p100"></div></div>
+                    </div>
+                </div>
+                <p class="detail_fa fa" id="detail">
+                    در پروژه شرکت FN Logistic، مسئول تحلیل فنی، برنامه‌ریزی اجرایی، تعیین مسیر توسعه و مدیریت کامل تیم فنی، به‌همراه تعامل مستقیم با کارفرما بودم. وظایف من شامل تحلیل رفتار کاربران، تحقیق و توسعه در خصوص تکنولوژی‌ها و نیازمندی‌ها، و طراحی راهکارهای فنی متناسب با اهداف پروژه می‌شد. همچنین بررسی، تحلیل و پیاده‌سازی ارتباط با سامانه‌های Kasa، فاکتور و سایر سرویس‌ها و زیرساخت‌های اتریشی، به‌همراه تحلیل و مدیریت ارتباطات مبتنی بر Socket را بر عهده داشتم.
+                    مدیریت و نظارت بر اجرای پروژه‌های موبایل در پلتفرم‌های Android و iOS، برنامه‌ریزی انتشار در استورهای بین‌المللی و تضمین کیفیت فنی خروجی‌ها از دیگر مسئولیت‌های من بود. در طول پروژه، تمامی نیازمندی‌های جدید کارفرما—از طراحی‌های گرافیکی تا اتصال به زیرساخت‌های دولتی و سرویس‌های جانبی—توسط من بررسی، تحلیل و به تسک‌های اجرایی برای تیم تبدیل می‌شد. همچنین با توجه به نیاز هر فاز، مدیریت افزایش یا کاهش نفرات تیم فنی انجام می‌گرفت.
+                </p>
+                <p class="detail_en" id="detail">
+                    In the FN Logistic project, I was responsible for technical analysis, execution planning, defining the development roadmap, and managing the entire technical team while maintaining direct communication with the client. My responsibilities included user behavior analysis, research and development on technologies and requirements, and designing technical solutions aligned with the project’s business goals. I also handled the analysis, integration, and implementation of connections with Kasa, invoicing systems, and other Austrian services and infrastructures, along with managing and optimizing socket-based communications.
+                    Additionally, I supervised and managed the execution of mobile applications on Android and iOS platforms, planned releases for international app stores, and ensured overall technical quality. Throughout the project lifecycle, all new client requirements—from graphical design changes to integrations with governmental infrastructures and third-party Austrian services—were analyzed, structured, and translated into actionable tasks for the execution team. Depending on each project phase, I was also responsible for scaling the technical team up or down as needed. My role in this project was Technical Manager.
+                </p>
+            </div>
+
+            <div class="cv_part">
+                <div class="detail_en" id="title2">Techlead - Hamup Co. (2024/2026)</div>
+                <div class="detail_fa fa" id="title2">راهبر فنی - هم آپ - ۱۴۰۲/۱۴۰۴    <a class="fa" target="_blank" id="web_page" href="https://hamup.ir/">(آقای نظری زاده)</a></div>
                 <a class="not_on_print" target="_blank" id="web_page" href="https://hamup.ir/"><img loading="lazy" src="img/projects/hamup.webp" alt="Hamup.ir"/></a>
                 <div id="status_box">
                     <a target="_blank" id="web_page" href="https://hamup.ir/">Hamup.ir</a>
                 </div>
                 <div id="status_box">
                     <div id="status_bar">
-                        <h4>Team Building</h4>
+                        <h4>Tech Team Building</h4>
                         <div><div class="p100"></div></div>
                     </div>
                     <div id="status_bar">
@@ -225,7 +277,7 @@
                 </div>
                 <div id="status_box">
                     <div id="status_bar">
-                        <h4>Team Building</h4>
+                        <h4>Tech Team Building</h4>
                         <div><div class="p100"></div></div>
                     </div>
                     <div id="status_bar">
@@ -272,7 +324,7 @@
                         <div><div class="p100"></div></div>
                     </div>
                     <div id="status_bar">
-                        <h4>Team Building</h4>
+                        <h4>Tech Team Building</h4>
                         <div><div class="p100"></div></div>
                     </div>
                     <div id="status_bar">
@@ -314,7 +366,7 @@
                         <div><div class="p100"></div></div>
                     </div>
                     <div id="status_bar">
-                        <h4>Team Building</h4>
+                        <h4>Tech Team Building</h4>
                         <div><div class="p100"></div></div>
                     </div>
                     <div id="status_bar">
@@ -355,7 +407,7 @@
                 </div>
                 <div id="status_box">
                     <div id="status_bar">
-                        <h4>Team Building</h4>
+                        <h4>Tech Team Building</h4>
                         <div><div class="p100"></div></div>
                     </div>
                     <div id="status_bar">
@@ -449,7 +501,7 @@
                 </div>
                 <div id="status_box">
                     <div id="status_bar">
-                        <h4>Team Building</h4>
+                        <h4>Tech Team Building</h4>
                         <div><div class="p100"></div></div>
                     </div>
                     <div id="status_bar">
