--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
             <div id="extra_space"></div>
             <!-- <div id="title">&lt;/</div> -->
             <div class="info_part1">
-                <img id="image-print" loading="lazy" src="./img/mesepehr-print.webp" alt="ebrahimsepehr.ir">
+                <img class="only_on_print" id="image-print" loading="lazy" src="./img/mesepehr-print.webp" alt="ebrahimsepehr.ir">
                 <p class="detail_fa" id="detail_fa">
-                    با بیش از <span class="experience_text_light fa">.۰</span><span class="experience_text fa">۱۳</span> سال تجربه در صنعت نرم‌افزار، تخصص من در توسعه نرم‌افزار و مدیریت پروژه است. در تیم‌سازی، برنامه‌نویسی، طراحی و ایجاد فرآیندهایی که توسعه نرم‌افزار را روان‌تر و کارآمدتر می‌کنند، مهارت بالایی دارم. هدایت تیم‌ها برای تولید محصولات نرم‌افزاری با کیفیت و بهبود عملکرد آن‌ها از طریق خودکارسازی فرآیندها و استفاده از ابزارهای مدیریت پروژه، کلید موفقیت من بوده است.
+                    با بیش از <span class="experience_text_light fa">.۰</span><span class="experience_text fa">۱۳</span> سال تجربه در صنعت نرم‌افزار، تخصص من در توسعه نرم‌افزار و مدیریت پروژه های نرم افزاری است. در تیم‌سازی، برنامه‌نویسی، طراحی و ایجاد فرآیندهایی که توسعه نرم‌افزار را روان‌تر و کارآمدتر می‌کنند، مهارت و تجربه بالایی دارم. هدایت تیم‌های نرم افزاری برای تولید محصولات نرم‌افزاری با کیفیت و انجام فرایند های بهبود عملکرد آن‌ها از طریق خودکارسازی فرآیندها و استفاده از ابزارهای مدیریت پروژه، کلید موفقیت من بوده است.
                     <br/><br/>همواره به دنبال پیاده‌سازی راه‌حل‌های خلاقانه و کاملاً سازگار با نیازهای مشتریان سازمانی هستم و رعایت استانداردهای آن‌ها برای من اولویت اول است.
                 </p>
                 <p class="detail_en" id="detail">
@@ -115,25 +115,26 @@
                 <span class="only_on_print">
                     <div class="detail_en" id="title">SKILLS</div>
                     <div class="detail_fa fa" id="title">مهارت ها</div>
-                    <div id="detail">Team Building| Mentorship| Managment| Solution Making| Scrum Master| Recruiting| Advanced Algorith Design </div>
-                    <div id="detail">AWS Cloud Platrorm| iOS Apps| Android Apps| Linux Servers| Window Servers| Web Platforms| CI/CD| Databases| VOIP| Blockchain</div>
-                    <div id="detail">JavaScript| PHP| NodeJS| C#| GoLang| Dart| SQL| Python| Phisic Engins</div>
+                    <div class="detail_en" id="detail">Team Building| Mentorship| Managment| Solution Making| Scrum Master| Recruiting| Advanced Algorith Design </div>
+                    <div  class="detail_fa fa"id="detail">تیم‌سازی | منتورینگ | مدیریت پروژه نرم افزاری | طراحی و ارائه راهکار نرم افزاری | جذب و ارزیابی نیروی فنی | طراحی پیشرفته الگوریتم‌ها | اسکرام مستر</div>
+                    <div id="detail">AWS Cloud Platrorm| iOS Apps| Android Apps| Linux Servers| Window Servers| Web Platforms| GIT| CI/CD| Databases| VOIP| Blockchain</div>
+                    <div id="detail">JavaScript| PHP| NodeJS| C#| GoLang| Dart| SQL| Python| Flutter| React| .net</div>
                 </span>
                 <div class="detail_en" id="title">Recommendations</div>
                 <div class="detail_fa fa" id="title">حسن انجام کار</div>
-                <div class="detail_en" id="detail"><a class="" target="_blank" href="https://www.ebrahimsepehr.ir/img/recommendations/sedasima-translate.pdf">IRIB</a></div>
-                <div class="detail_fa fa" id="detail"><a class="fa" target="_blank" href="https://www.ebrahimsepehr.ir/img/recommendations/sedasima.pdf">صدا و سیما</a></div>
-                <div class="detail_en" id="detail"><a class="" target="_blank" href="https://www.ebrahimsepehr.ir/img/recommendations/Mohammad E. Sepehr - recommendation.pdf">Distriqt Pty Ltd</a></div>
-                <div class="detail_fa" id="detail"><a class="fa" target="_blank" href="https://www.ebrahimsepehr.ir/img/recommendations/Mohammad E. Sepehr - recommendation.pdf">Distriqt Pty Ltd</a></div>
-                <div class="detail_fa fa" id="detail"><a class="fa" target="_blank" href="https://www.ebrahimsepehr.ir/img/recommendations/bina.pdf">موسسه دیده گستر فرهنگ بینا</a></div>
-                <div class="detail_en" id="detail"><a class="" target="_blank" href="https://www.ebrahimsepehr.ir/img/recommendations/paliz-translate.pdf">Paliz Co.</a></div>
-                <div class="detail_fa fa" id="detail"><a class="fa" target="_blank" href="https://www.ebrahimsepehr.ir/img/recommendations/paliz.pdf">شرکت فناوران ارتباطات پالیز</a></div>
-                <div class="detail_en" id="detail"><a class="" target="_blank" href="https://www.ebrahimsepehr.ir/img/recommendations/mhelli-translate.pdf">MHelli Co.</a></div>
-                <div class="detail_fa fa" id="detail"><a class="fa" target="_blank" href="https://www.ebrahimsepehr.ir/img/recommendations/mhelli.pdf">موسسه علامه حلی</a></div>
-                <div class="detail_en" id="detail"><a class="" target="_blank" href="https://www.ebrahimsepehr.ir/img/Patent.webp">Registered Patent</a></div>
-                <div class="detail_fa fa" id="detail"><a class="fa" target="_blank" href="https://www.ebrahimsepehr.ir/img/Patent.webp">ثبت اختراع</a></div>
-                <div class="detail_en" id="detail"><a class="" target="_blank" href="https://github.com/SaffronCode/SaffronCode">SDK</a></div>
-                <div class="detail_fa fa" id="detail"><a class="fa" target="_blank" href="https://github.com/SaffronCode/SaffronCode">SDK توسعه یافته</a></div>
+                <div class="detail_en" id="detail"><a class="" target="_blank" href="https://www.ebrahimsepehr.ir/img/recommendations/sedasima-translate.pdf">- IRIB</a></div>
+                <div class="detail_fa fa" id="detail"><a class="fa" target="_blank" href="https://www.ebrahimsepehr.ir/img/recommendations/sedasima.pdf">- صدا و سیما</a></div>
+                <div class="detail_en" id="detail"><a class="" target="_blank" href="https://www.ebrahimsepehr.ir/img/recommendations/Mohammad E. Sepehr - recommendation.pdf">- Distriqt Pty Ltd</a></div>
+                <div class="detail_fa" id="detail"><a class="fa" target="_blank" href="https://www.ebrahimsepehr.ir/img/recommendations/Mohammad E. Sepehr - recommendation.pdf">- Distriqt Pty Ltd</a></div>
+                <div class="detail_fa fa" id="detail"><a class="fa" target="_blank" href="https://www.ebrahimsepehr.ir/img/recommendations/bina.pdf">- موسسه دیده گستر فرهنگ بینا</a></div>
+                <div class="detail_en" id="detail"><a class="" target="_blank" href="https://www.ebrahimsepehr.ir/img/recommendations/paliz-translate.pdf">- Paliz Co.</a></div>
+                <div class="detail_fa fa" id="detail"><a class="fa" target="_blank" href="https://www.ebrahimsepehr.ir/img/recommendations/paliz.pdf">- شرکت فناوران ارتباطات پالیز</a></div>
+                <div class="detail_en" id="detail"><a class="" target="_blank" href="https://www.ebrahimsepehr.ir/img/recommendations/mhelli-translate.pdf">- MHelli Co.</a></div>
+                <div class="detail_fa fa" id="detail"><a class="fa" target="_blank" href="https://www.ebrahimsepehr.ir/img/recommendations/mhelli.pdf">- موسسه علامه حلی</a></div>
+                <div class="detail_en" id="detail"><a class="" target="_blank" href="https://www.ebrahimsepehr.ir/img/Patent.webp">- Registered Patent</a></div>
+                <div class="detail_fa fa" id="detail"><a class="fa" target="_blank" href="https://www.ebrahimsepehr.ir/img/Patent.webp">- ثبت اختراع</a></div>
+                <div class="detail_en" id="detail"><a class="" target="_blank" href="https://github.com/SaffronCode/SaffronCode">- SDK</a></div>
+                <div class="detail_fa fa" id="detail"><a class="fa" target="_blank" href="https://github.com/SaffronCode/SaffronCode">- SDK توسعه یافته</a></div>
                 
 
                 <div class="detail_en" id="title">SOCIAL</div>
@@ -193,7 +194,7 @@
 
             <div class="cv_part">
                 <div class="detail_en" id="title2">CTO - FN Logistic & Dienstleistung GmbH (2025/now)</div>
-                <div class="detail_fa fa" id="title2">مدیر فنی - FN Logistic & Dienstleistung GmbH - ۱۴۰۳/تاکنون    <a class="fa" target="_blank" id="web_page" href="https://www.linkedin.com/in/mohammadfoad-nadaf-70a492274/">(آقای نداف)</a></div>
+                <div class="detail_fa fa" id="title2">مدیر فنی - FN Logistic & Dienstleistung GmbH - ۱۴۰۳    <a class="fa" target="_blank" id="web_page" href="https://www.linkedin.com/in/mohammadfoad-nadaf-70a492274/">(آقای نداف)</a></div>
                 <a class="not_on_print" target="_blank" id="web_page" href="https://snap-food.at/"><img loading="lazy" src="img/projects/snapfood.webp" alt="snap-food.at"/></a>
                 <div id="status_box">
                     <a target="_blank" id="web_page" href="https://snap-food.at/">Snap-food.at</a>
@@ -1044,7 +1045,7 @@
                         <br/><br/>
                         Throughout my journey, my main focus has been on programming and solving complex algorithmic problems to advance the best software solutions for my clients. My goal is to ensure that no project or programmer faces setbacks or disappointments during any stage of project execution. Consequently, I continue to pursue my professional work in programming and problem-solving. I possess extensive experience in team collaboration with developers, designers, and project managers, and I am capable of creating a positive and cohesive work environment. By emphasizing quality and precision in every aspect of a project, I strive to deliver the best results to my clients.</p>
                 </div>
-                <img loading="lazy" id="logo" src="img/logo.png" alt="ebrahimsepehr logo">
+                <img class="not_on_print" loading="lazy" id="logo" src="img/logo.png" alt="ebrahimsepehr logo">
                 <div class="not_on_print detail_en" id="title2">Personal Characteristics</div>
                 <div class="not_on_print detail_fa fa" id="title2">ویژگی های شخصیتی</div>
                 <p class="not_on_print en-fa" id="detail">MBTI: ISTJ</p>
